--- a/SecretariaConcafras.Application/SecretariaConcafras.Application.csproj
+++ b/SecretariaConcafras.Application/SecretariaConcafras.Application.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SecretariaConcafras.Domain\SecretariaConcafras.Domain.csproj" />
+    <ProjectReference Include="..\SecretariaConcafras.Infrastructure\SecretariaConcafras.Infrastructure.csproj" />
     <ProjectReference Include="..\SecretariaConcafras.SharedKernel\SecretariaConcafras.SharedKernel.csproj" />
   </ItemGroup>
 
