Ajustes Inscrição e Pagamento

--- a/SecretariaConcafras.API/appsettings.json
+++ b/SecretariaConcafras.API/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=SecretariaConcafrasDb;Username=postgres;Password=259864"
   },
+  "MercadoPago": {
+    "AccessToken": "TEST-XXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+    "AppBaseUrl": "http://localhost:4200", // URL do seu front para back_urls
+    "WebhookBaseUrl": "https://seu-ngrok-ou-dominio" // URL pública do webhook em dev/prod
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
