--- a/SecretariaConcafras.Infrastructure/SecretariaConcafras.Infrastructure.csproj
+++ b/SecretariaConcafras.Infrastructure/SecretariaConcafras.Infrastructure.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Configurations\**" />
+    <EmbeddedResource Remove="Data\Configurations\**" />
+    <None Remove="Data\Configurations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EFCore.NamingConventions" Version="9.*" />
+    <PackageReference Include="mercadopago-sdk" Version="2.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
@@ -19,10 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SecretariaConcafras.Domain\SecretariaConcafras.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Configurations\" />
   </ItemGroup>
 
 </Project>
