--- a/SecretariaConcafras.API/SecretariaConcafras.API.csproj
+++ b/SecretariaConcafras.API/SecretariaConcafras.API.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="EFCore.NamingConventions" Version="9.*" />
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="mercadopago-sdk" Version="2.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
