--- a/.github/workflows/publish-api.yml
+++ b/.github/workflows/publish-api.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  OWNER: seu-user-ou-org        # >>> minúsculo!
+  OWNER: edsongaldino        # >>> minúsculo!
   IMAGE_NAME: secretaria-concafras-api
   TAG: latest                   # você pode versionar (ex: v1, sha) se quiser
 
