ajustes pagamento mercadopago

--- a/SecretariaConcafras.API/appsettings.Development.json
+++ b/SecretariaConcafras.API/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "JwtSettings": {
+    "Secret": "dev-secret-ultra-simples-mas-com-32+chars"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=SecretariaConcafrasDb;Username=postgres;Password=259864"
+  },
+  "MercadoPago": {
+    "AccessToken": "APP_USR-TEST-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+    "AppBaseUrl": "http://localhost:4200",
+    "WebhookBaseUrl": "http://localhost:5000/api/pagamentos/mp/webhook"
   }
 }
