--- a/.github/workflows/publish-api.yml
+++ b/.github/workflows/publish-api.yml
@@ -5,11 +5,15 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+concurrency:
+  group: deploy-inscribo-api
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
-  OWNER: edsongaldino        # >>> minúsculo!
+  OWNER: edsongaldino
   IMAGE_NAME: secretaria-concafras-api
-  TAG: latest                   # você pode versionar (ex: v1, sha) se quiser
+  TAG: latest
 
 jobs:
   build_and_push:
@@ -20,7 +24,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # (opcional, mas recomendado) meta para tags automáticas
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -49,7 +52,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          platforms: linux/amd64         # sua VPS é amd64 (DO)
+          platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -64,10 +67,35 @@ jobs:
           username: ${{ secrets.DO_USER }}
           key: ${{ secrets.DO_KEY }}
           script: |
-            set -e
+            set -euo pipefail
+
+            # Login no registry
+            echo "Logging in to GHCR..."
             docker login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+
             cd ~/apps/secretaria-concafras
-            # puxa imagem nova sem derrubar os outros
+
+            echo "Pulling latest image..."
             docker compose pull api
+
+            echo "Starting/Updating API..."
             docker compose up -d api
-            docker image prune -f
+
+            echo "Checking container status..."
+            docker ps --format 'table {{.Names}}\t{{.Status}}\t{{.Image}}' | sed -n '1,5p'
+
+            # Healthcheck rápido (ajuste a URL se necessário)
+            echo "Healthcheck (best-effort)..."
+            timeout 10s curl -fsS -H "Host: api.inscribo.com.br" https://127.0.0.1 --insecure >/dev/null || true
+
+            echo "Tail last logs (best-effort)..."
+            docker logs sc_api --tail=120 || true
+
+            # Limpeza resiliente (evita erro 'a prune operation is already running')
+            echo "Pruning old images/builder cache (best-effort)..."
+            if ! pgrep -fa "docker.*prune" >/dev/null; then
+              timeout 60s docker image prune -af --filter "until=168h" || true
+              timeout 60s docker builder prune -af || true
+            else
+              echo "Another prune is running; skipping cleanup."
+            fi
