CORREÇÕES API PROGRAM PAGAMENTO

--- a/SecretariaConcafras.API/appsettings.Development.json
+++ b/SecretariaConcafras.API/appsettings.Development.json
@@ -6,8 +6,8 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=SecretariaConcafrasDb;Username=postgres;Password=259864"
   },
   "MercadoPago": {
-    "AccessToken": "APP_USR-TEST-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
-    "AppBaseUrl": "http://localhost:4200",
-    "WebhookBaseUrl": "http://localhost:5000/api/pagamentos/mp/webhook"
+    "AccessToken": "APP_USR-520654206472193-090918-7a81b3b2af303ec9f85a0b3bdd7dc8a5-284346389",
+    "AppBaseUrl": "https://inscribo.com.br",
+    "WebhookBaseUrl": "https://api.inscribo.com.br/api/pagamentos/mp/webhook"
   }
 }
